WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
207389
Captions sometimes render at the wrong size when in fullscreen and PiP
https://bugs.webkit.org/show_bug.cgi?id=207389
Summary
Captions sometimes render at the wrong size when in fullscreen and PiP
Eric Carlson
Reported
2020-02-07 09:38:23 PST
Captions sometimes render at the wrong size when in fullscreen and PiP
Attachments
Patch
(43.05 KB, patch)
2020-02-07 09:56 PST
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
Patch
(41.03 KB, patch)
2020-02-07 12:03 PST
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2020-02-07 09:39:04 PST
<
rdar://problem/58677864
>
Eric Carlson
Comment 2
2020-02-07 09:56:32 PST
Created
attachment 390094
[details]
Patch
Eric Carlson
Comment 3
2020-02-07 12:03:02 PST
Created
attachment 390113
[details]
Patch
WebKit Commit Bot
Comment 4
2020-02-07 14:07:42 PST
Comment on
attachment 390113
[details]
Patch Clearing flags on attachment: 390113 Committed
r256060
: <
https://trac.webkit.org/changeset/256060
>
WebKit Commit Bot
Comment 5
2020-02-07 14:07:44 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug